kube/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-tagsdev
  name: web-tagsdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-tagsdev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web-tagsdev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - 'amd64'
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: kubernetes.io/role
                operator: In
                values:
                - 'worker'
          # - weight: 10
          #   preference:
          #     matchExpressions:
          #     - key: node-role.kubernetes.io/master
          #       operator: In
          #       values:
          #       - 'true'
          - weight: 5
            preference:
              matchExpressions:
              - key: core
                operator: In
                values:
                - '2'
          - weight: 5
            preference:
              matchExpressions:
              - key: core
                operator: In
                values:
                - '1'
          - weight: 5
            preference:
              matchExpressions:
              - key: disk
                operator: In
                values:
                - 'ssd'
      imagePullSecrets:
      - name: ghcr.io
      containers:
        - image: ghcr.io/mcbtaguiad/web-tagsdev-jekyll:v1.1.2
          imagePullPolicy: Always
          name: web-tagsdev
          ports:
            - containerPort: 80
      restartPolicy: Always
